[package]
name = "ch-router"
version = "0.1.0"
edition = "2021"
description = "A router based on Contraction Hierarchies with optional path unfolding and \"hot groups\""
license = "MIT"
authors = ["Jeremi Sobierski <tbuli1112@gmail.com>"]
repository = "https://github.com/tBuLi12/ch-router"
readme = "README.md"

[features]
default = ["path-unfolding"]
path-unfolding = []

[dependencies]
rustc-hash = "2.0.0"
